<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CameraDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- demo activity -->
    <string name="demo_activity_file">Select file</string>
    <string name="demo_activity_mode_file">File</string>
    <string name="demo_activity_mode_stream">Stream</string>
    <string name="demo_activity_play">Play</string>
    <string name="demo_activity_pause">Pause</string>
    <string name="demo_activity_stop">Stop</string>
    <string name="demo_activity_volume">Volume</string>
    <string name="demo_activity_fast">Fast</string>
    <string name="demo_activity_slow">Slow</string>
    <string name="demo_activity_normal">Normal</string>
    <string name="demo_activity_quality">Quality</string>
    <string name="demo_activity_capture">Audio Capture</string>
    <string name="demo_activity_stopcapture">Stop Audio Capture</string>
    <string name="demo_activity_snappitcure">SnapPict</string>
    <string name="demo_activity_decode_sw">SW</string>
    <string name="demo_activity_decode_hw">HW</string>
    <string name="demo_activity_decode_hwFast">HWFAST</string>
    <!-- quality -->
    <string name="quality_activity_bright">Brightness</string>
    <string name="quality_activity_contrast">Contrast</string>
    <string name="quality_activity_saturation">Saturation</string>
    <string name="quality_activity_huen">Huen</string>




    <string name="login_activity_user">用户:</string>
    <string name="login_activity_port">端口:</string>
    <string name="login_activity_ip">IP:</string>
    <string name="login_activity_password">密码:</string>
    <string name="login_activity_login">登录</string>
    <string name="login_activity_logout">登出</string>

    <!-- add -->
    <string name="login">正在登录</string>
    <string name="progress_content">正在登录</string>
    <string name="seen_more">更多</string>
    <string name="refresh_bar_last_update">上次更新</string>
    <string name="drop_dowm">下拉可以刷新</string>
    <string name="release_update">松开可以刷新</string>
    <string name="loading">载入中...</string>
    <string name="header_last_time">最近更新：</string>
    <string name="common_connect">正在连接</string>
    <string name="tab_group_tv">组织</string>
    <string name="grouplist_getgroup_fail">获取组织列表失败，异常代码：</string>
    <string name="select_channel_limit_tv">打开通道上限为32路</string>
    <string name="select_channel_tv">请先选择预览通道</string>
    <string name="select_channel_already_open">通道已打开</string>
    <string name="common_msg_title">提示</string>
    <string name="common_confirm">确定</string>
    <string name="tongdao_mc">通道名称:</string>

    <!-- popwindow -->
    <string name="play_real">实时</string>

    <string name="logout">退出</string>
    <string name="logout_fail">退出失败</string>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="empty"></string>

    <string-array name="grouplist_spinner">
        <item>1 实时</item>
        <item>2 回放</item>
    </string-array>

    <string name="item_name_reset">重置地图</string>
    <string name="item_name_refresh">刷新</string>
    <string name="action_settexts">图层文字显示控制</string>
    <string name="item_name_offline">离线地图功能</string>
    <string name="item_name_update">检查更新</string>
    <string name="item_name_exit">退出</string>
    <string name="sxtname_mc">摄像头名称:</string>
    <string name="sxttype_mc">摄像头类型:</string>
    <string name="nzdd_mc">安装地点:</string>
    <string name="lat_mc">地址经度:</string>
    <string name="lon_mc">地址纬度:</string>
    <string name="na_mc">视野朝向:</string>
    <string name="sxxq_mc">所属辖区:</string>
    <string name="jsdate_mc">建设日期:</string>
    <string name="weihu_mc">维护单位:</string>
    <string name="use_mc">使用分类:</string>
    <string name="str_capture_bitmap"></string>
    <string name="capture_success">保存成功</string>
    <string name="capture_fail">保存失败</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_alert">对话框标题</string>
    <string name="layer_png">图标</string>
    <string name="layer_txt">文字</string>
    <string name="layer_gps_car">GPS(车)</string>
    <string name="layer_gps_peo">GPS(人)</string>
    <string name="layer_gps_qw">GPS(勤务)</string>
    <string name="layer_cam1">固定摄像头</string>
    <string name="layer_cam2">遥控摄像头</string>
    <string name="layer_cam3">手持执法仪</string>
    <string name="layer_sd">所队</string>
    <string name="layer_gt">治安岗亭</string>
    <string name="layer_jc">流动警务车</string>
    <string name="layer_jt">交通灯</string>
    <string name="layer_yd">交通诱导</string>
    <string name="layer_ld">路灯杆</string>
    <string name="layer_kk">卡口</string>
    <string name="layer_byone">备用一</string>
    <string name="layer_bytwo">备用二</string>
</resources>
